// Vitest Snapshot v1

exports[`Parse v39 payload > Payload parse v39 result 1`] = `
{
  "author": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "authorPublicKey": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "encrypted": OkImpl {
    "err": false,
    "ok": true,
    "val": Uint8Array [
      58,
      13,
      110,
      230,
      146,
      198,
      244,
      104,
      150,
      177,
      150,
      241,
      67,
      1,
      192,
      26,
      210,
      250,
      38,
      170,
    ],
  },
  "encryption": OkImpl {
    "err": false,
    "ok": true,
    "val": {
      "ephemeralPublicKey": {},
      "iv": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          6,
          51,
          219,
          126,
          36,
          128,
          92,
          43,
          220,
          255,
          105,
          234,
          42,
          253,
          167,
          205,
        ],
      },
      "ownersAESKeyEncrypted": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          106,
          249,
          48,
          4,
          170,
          140,
          164,
          34,
          179,
          156,
          103,
          37,
          188,
          40,
          110,
          186,
          29,
          128,
          16,
          76,
          85,
          208,
          157,
          120,
          196,
          143,
          202,
          0,
          216,
          112,
          136,
          162,
          95,
          87,
          39,
          230,
          216,
          230,
          214,
          111,
          141,
          246,
          19,
          118,
          128,
          57,
          174,
          200,
          153,
          26,
          2,
          119,
          191,
          201,
          43,
          87,
          67,
          65,
          105,
          56,
          174,
          223,
          77,
          169,
          168,
          211,
          17,
          166,
          163,
          1,
          19,
          28,
          246,
          18,
          125,
          26,
          100,
          124,
          150,
          138,
          193,
          53,
          19,
          71,
          150,
          8,
          255,
          135,
          82,
          137,
          98,
          78,
          109,
          135,
          179,
          108,
          175,
          78,
          15,
          88,
          237,
          39,
          37,
          66,
          162,
          12,
          125,
          130,
          39,
          8,
          158,
          75,
          21,
          182,
          98,
          172,
          66,
          35,
          87,
          30,
          96,
          165,
          24,
          113,
          147,
          172,
          84,
          145,
          25,
          58,
          178,
          127,
          32,
          31,
          22,
          82,
          101,
          52,
        ],
      },
      "type": "E2E",
    },
  },
  "signature": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "version": -40,
}
`;

exports[`Parse v40 payload > Payload parse v40 result 1`] = `
{
  "author": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "authorPublicKey": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "encrypted": OkImpl {
    "err": false,
    "ok": true,
    "val": Uint8Array [
      58,
      13,
      110,
      230,
      146,
      198,
      244,
      104,
      150,
      177,
      150,
      241,
      67,
      1,
      192,
      26,
      210,
      250,
      38,
      170,
    ],
  },
  "encryption": OkImpl {
    "err": false,
    "ok": true,
    "val": {
      "ephemeralPublicKey": {},
      "iv": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          6,
          51,
          219,
          126,
          36,
          128,
          92,
          43,
          220,
          255,
          105,
          234,
          42,
          253,
          167,
          205,
        ],
      },
      "ownersAESKeyEncrypted": OkImpl {
        "err": false,
        "ok": true,
        "val": Uint8Array [
          106,
          249,
          48,
          4,
          170,
          140,
          164,
          34,
          179,
          156,
          103,
          37,
          188,
          40,
          110,
          186,
          29,
          128,
          16,
          76,
          85,
          208,
          157,
          120,
          196,
          143,
          202,
          0,
          216,
          112,
          136,
          162,
          95,
          87,
          39,
          230,
          216,
          230,
          214,
          111,
          141,
          246,
          19,
          118,
          128,
          57,
          174,
          200,
          153,
          26,
          2,
          119,
          191,
          201,
          43,
          87,
          67,
          65,
          105,
          56,
          174,
          223,
          77,
          169,
          168,
          211,
          17,
          166,
          163,
          1,
          19,
          28,
          246,
          18,
          125,
          26,
          100,
          124,
          150,
          138,
          193,
          53,
          19,
          71,
          150,
          8,
          255,
          135,
          82,
          137,
          98,
          78,
          109,
          135,
          179,
          108,
          175,
          78,
          15,
          88,
          237,
          39,
          37,
          66,
          162,
          12,
          125,
          130,
          39,
          8,
          158,
          75,
          21,
          182,
          98,
          172,
          66,
          35,
          87,
          30,
          96,
          165,
          24,
          113,
          147,
          172,
          84,
          145,
          25,
          58,
          178,
          127,
          32,
          31,
          22,
          82,
          101,
          52,
        ],
      },
      "type": "E2E",
    },
  },
  "signature": OkImpl {
    "err": false,
    "ok": true,
    "val": NoneImpl {
      "none": true,
      "some": false,
    },
  },
  "version": -39,
}
`;
